keycloak/webfinger-page.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: webfinger-redirect-nginx
#   namespace: default
# data:
#   default.conf: |
#     server {
#         listen 80;
#         server_name rriv.org;

#         location = /.well-known/webfinger {
#             return 302 https://auth.rriv.org/realms/vpn/.well-known/openid-configuration$is_args$args;
#         }

#         location / {
#             return 404;
#         }
#     }
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfinger-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webfinger-app
  template:
    metadata:
      labels:
        app: webfinger-app
    spec:
      containers:
        - name: webfinger
          image: kleipper/rriv-webfinger-app:latest # TODO: put this in a rriv docker account
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webfinger-app
  namespace: default
spec:
  selector:
    app: webfinger-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webfinger-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: rriv.org
      http:
        paths:
          - path: /(.well-known/webfinger)
            pathType: ImplementationSpecific
            backend:
              service:
                name: webfinger-app
                port:
                  number: 80
